# ksx

./: .gitignore  FINAL_PACKAGING_SUMMARY.md  PACKAGING_FIXES.md  PACKAGING_GUIDE.md  README.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_SUPPORT_SUMMARY.md  build.py  build_windows.py  check_env.py  create_dmg.py  create_extended_test_data.py  create_full_test_data.py  create_installer.py  data.json  debug_database_paths.py  install_macos.sh  install_windows.bat  ksx_app.spec  ksx_app_windows.spec  ksx_desktop_app.py  load_test_data.py  pyproject.toml  requirements.txt  setup_windows_dev.bat  start_desktop.bat  start_dev_backend.bat  start_dev_backend_improved.bat  start_dev_frontend.bat  start_dev_mode.bat  start_web_only.bat  start_windows_app.bat  startup_check.py  stop_backend.bat  test_api.py  test_backend_db_fix.py  test_backend_db_path.py  test_backend_environment.py  test_crawler.py  test_crawler_db_save.py  (+8 more)
backend/: app.py  main.py  requirements.txt  start.bat
backend/api/: data.py  export.py  import_api.py  sync.py
backend/constants/: __init__.py  field_config.py
backend/models/: schemas.py
backend/utils/: data_comparator.py  excel_export.py  excel_reader.py  file_scanner.py
crawler/: crawler.py
desktop/: README.md  ksx_desktop_app.py  ksx_desktop_app_windows.py  start_desktop_app.bat  start_desktop_app.sh
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
services/: browser_manager.py  config_database_manager.py  database_manager.py  playwright_installer.py
services/crawler/: README.md  config.py  (+6 more)
(+20 files in other folders)
