[project]
name = "KSX"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Desktop app dependencies
    "PySide6>=6.5.0",
    "PySide6-Addons>=6.5.0",
    # Backend API dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "loguru==0.7.2",
    # Crawler service dependencies
    "playwright==1.40.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyinstaller>=6.15.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
